# Composer

./: .gitignore  README.md  id.ngoding.Composer.json  meson.build  pypi-dependencies.json  requirements.txt
data/: id.ngoding.Composer.desktop.in  id.ngoding.Composer.gschema.xml  id.ngoding.Composer.metainfo.xml.in  id.ngoding.Composer.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: composer.gresource.xml  composer.in  main.py  meson.build  window.py  window.ui
src/models/: lyrics.py  music_file.py
src/services/: file_service.py  logger_service.py  lrclib_client.py  lyrics_service.py  music_scanner.py  romanization_service.py  settings_service.py
src/views/: library_view.py  lyrics_selection_dialog.py  preferences_dialog.py  welcome_view.py
